--- a/Publications.html
+++ b/Publications.html
@@ -6432,9 +6432,11 @@ function recaptchaOnload() {
 <ul style="list-style: none; line-height: 120%">
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/HPG24.png"/>
 						<b>Parallel spatiotemporally adaptive DEM-based snow simulation</b>
-						<br/>Simon Andreasson*, Linus Östergaard*, Prashant Goswami (* equal contribution)
-						<br/><i>To Appear, Proceedings of the ACM on Computer Graphics and Interactive Techniques Journal (High Performance Graphics) </i>, 2024 <br/>
+						<br/>
+						Simon Andreasson*, Linus Östergaard*, Prashant Goswami (* equal contribution)
+						<br/><i>To Appear, Proceedings of the ACM on Computer Graphics and Interactive Techniques Journal (High Performance Graphics)</i>, 2022 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://www.youtube.com/watch?v=rlBrUPU2CPc" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/STAR24.png"/>
@@ -6513,7 +6515,7 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2022</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
-<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/House3_EGPGV22.png"/>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/House3_EGPGV22.png"/>
 						<b>Iterative discrete element solver for efficient snow simulation</b>
 						<br/>
 						Prashant Goswami*, Adrian Nordin*, Simon Nylen* (* equal contribution)
