--- a/Publications.html
+++ b/Publications.html
@@ -6459,7 +6459,7 @@ function recaptchaOnload() {
 						<b>A Research Methodology Course in a Game Development Curriculum</b>
 						<br/>
 						Yan Hu, Veronica Sundstedt, Prashant Goswami
-						<br/><i>To Appear, Education Papers, Eurographics</i>, 2024 <br/>
+						<br/><i>Education Papers, Eurographics</i>, 2024 <br/>
 						<a href="https://diglib.eg.org/bitstream/handle/10.2312/eged20241006/07_eged20241006.pdf?sequence=1&isAllowed=y" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>				
