--- a/Teaching.html
+++ b/Teaching.html
@@ -6195,6 +6195,7 @@ function recaptchaOnload() {
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 <p><u>&nbsp;Previous (Examiner, Course responsible and Main instructor):</u></p>
+<p>DV1521 : Research Orientation in Game and Software Technology (LP4) 2024&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.2)</p>
 <p>DV2591 : Game Engine Architecture (LP2) 2023&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.9)</p>
 <p>DV1521 : Research Orientation in Game and Software Technology (LP4) 2023&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.3)</p>
 <p>DV1569 : Artificial Intelligence for Games (LP2) 2022&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: -)</p>
@@ -6219,12 +6220,9 @@ function recaptchaOnload() {
 <p>DV2549 : Game Engine Architecture (LP1) 2015 &nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.4/4.0)</p> 
 <p>DV1474 : Visualization (LP3) 2015&nbsp;</p> 
 <p>&nbsp;</p> 
-<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2023&nbsp; (Head-Examiner)</p>
-<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2022&nbsp; (Head-Examiner)</p>
-<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2021&nbsp; (Head-Examiner)</p>
-<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2020&nbsp; (Head-Examiner)</p>
-<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2019&nbsp; (Head-Examiner)</p>
+<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2019-2023&nbsp; (Head-Examiner)</p>
 <p>&nbsp;</p> 
+<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2024  (Examiner, Course responsible) (Course evaluation: 3.4/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2023  (Examiner, Course responsible) (Course evaluation: 3.3/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2022  (Examiner, Course responsible) (Course evaluation: 3.4/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2021  (Examiner, Course responsible) (Course evaluation: 3.3/4.0)</p> 
@@ -6233,6 +6231,7 @@ function recaptchaOnload() {
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2018 (Examiner, Course responsible) (Course evaluation: 3.7/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2017 (Examiner, Course responsible) (Course evaluation: 2.6/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2016(Examiner)</p> 
+<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2024  (Examiner, Course responsible) (Course evaluation: -)</p> 
 <p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2023  (Examiner, Course responsible) (Course evaluation: -)</p> 
 <p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2022  (Examiner, Course responsible) (Course evaluation: -)</p> 
 <p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2021  (Examiner, Course responsible) (Course evaluation: -)</p> 
