--- a/Publications.html
+++ b/Publications.html
@@ -6437,6 +6437,7 @@ function recaptchaOnload() {
 						<br/><i>To Appear, Proceedings of the ACM on Computer Graphics and Interactive Techniques Journal (High Performance Graphics)</i>, 2024 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=rlBrUPU2CPc" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<a href="https://www.youtube.com/watch?v=L8O_ruVe4Uo" target="_blank">[<font color="#0547f6">Presentation</font>]</a>						
 						<br/><br/><br/><br/><br/>
 				</li>
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/STAR24.png"/>
