--- a/Publications.html
+++ b/Publications.html
@@ -6464,7 +6464,7 @@ function recaptchaOnload() {
 						<a href="https://diglib.eg.org/bitstream/handle/10.2312/eged20241006/07_eged20241006.pdf?sequence=1&isAllowed=y" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>			
-				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="IEEE_MetroXRAINE_2024.png"/>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/IEEE_MetroXRAINE_2024.png"/>
 						<b>Towards an Ethical and Data Privacy Metrology for AI-Enriched Human-Centered XR Systems</b>
 						<br/>
 						Yan Hu, Kurt Tutschku, Veselka Boeva, Prashant Goswami, Shahrooz Abghari, Veronica Sundstedt
