--- a/Publications.html
+++ b/Publications.html
@@ -6434,8 +6434,8 @@ function recaptchaOnload() {
 						<b>Parallel spatiotemporally adaptive DEM-based snow simulation</b>
 						<br/>
 						Simon Andreasson*, Linus Östergaard*, Prashant Goswami (* equal contribution)
-						<br/><i>To Appear, Proceedings of the ACM on Computer Graphics and Interactive Techniques Journal (High Performance Graphics)</i>, 2024 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><i>Proceedings of the ACM on Computer Graphics and Interactive Techniques Journal (High Performance Graphics), Vol. 7, Num. 3, </i>, 2024 <br/>
+						<a href="https://dl.acm.org/doi/pdf/10.1145/3675374" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=rlBrUPU2CPc" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<a href="https://www.youtube.com/watch?v=L8O_ruVe4Uo" target="_blank">[<font color="#0547f6">Presentation</font>]</a>						
 						<br/><br/><br/><br/><br/>
@@ -6444,7 +6444,7 @@ function recaptchaOnload() {
 						<b>Snow and Ice Animation Methods in Computer Graphics</b>
 						<br/>
 						Prashant Goswami
-						<br/><i>Computer Graphics Forum, State-of-the-art Report, Eurographics</i>, 2024 <br/>
+						<br/><i>State-of-the-art Report, Eurographics, Computer Graphics Forum, Vol. 43, Num. 2, </i>, 2024 <br/>
 						<a href="https://www.diva-portal.org/smash/get/diva2:1853187/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6506,7 +6506,7 @@ function recaptchaOnload() {
 						<b>Design of Artificial Intelligence-based products: Barriers and Enablers</b>
 						<br/>
 						 Santosh Jagtap, Prashant Goswami 
-						<br/><i>Book Chapter, Springer, Design in the Era of Industry 4.0, Volume 3, Proceedings of the 9th International Conference on Research Into Design (iCord'23), pp.647-658,</i> 2023 <br/>
+						<br/><i>Book Chapter, Springer, Design in the Era of Industry 4.0, Vol. 3, Proceedings of the 9th International Conference on Research Into Design (iCord'23), pp.647-658,</i> 2023 <br/>
 						<a href="https://www.researchgate.net/profile/Santosh-Jagtap-3/publication/372610533_Design_of_Artificial_Intelligence-Based_Products_Barriers_and_Enablers/links/64cb18a140a524707b8e3334/Design-of-Artificial-Intelligence-Based-Products-Barriers-and-Enablers.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
