--- a/Publications.html
+++ b/Publications.html
@@ -6434,7 +6434,7 @@ function recaptchaOnload() {
 						<b>Parallel spatiotemporally adaptive DEM-based snow simulation</b>
 						<br/>
 						Simon Andreasson*, Linus Östergaard*, Prashant Goswami (* equal contribution)
-						<br/><i>Proceedings of the ACM on Computer Graphics and Interactive Techniques Journal (High Performance Graphics), Vol. 7, Num. 3, </i>, 2024 <br/>
+						<br/><i>Proceedings of the ACM on Computer Graphics and Interactive Techniques Journal (High Performance Graphics), Vol. 7, Num. 3, </i> 2024 <br/>
 						<a href="https://dl.acm.org/doi/pdf/10.1145/3675374" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=rlBrUPU2CPc" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<a href="https://www.youtube.com/watch?v=L8O_ruVe4Uo" target="_blank">[<font color="#0547f6">Presentation</font>]</a>						
