--- a/index.html
+++ b/index.html
@@ -6273,6 +6273,7 @@ function recaptchaOnload() {
 <!--		<div class="text-content"><h4 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://prashantgos.github.io/SubmissionVenues.html&quot;,&quot;inNewWin&quot;:true}" href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 10px;">Submission Venues</span></font></span></a></h4></div>-->
 		</div><div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
+	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Jun 2024: Our paper "<strong>Parallel spatiotemporally adaptive DEM-based snow simulation</strong>" is accepted at High Performance Graphics 2024</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Mar 2024: Our paper "<strong>Exploring the Effects of Foveated Rendering on Virtual Reality Game Graphics</strong>" is accepted at IEEE GEM 2024</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2024: Our State-of-the-Art Report (STAR) on "<strong>Snow and Ice Animation Methods in Computer Graphics</strong>" and an Education paper is accepted at Eurographics 2024!</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">2023: One paper accepted at iCord'23, Frontiers in Computer Science, IPTA '23, SAIS '23, each</span></li>
