--- a/index.html
+++ b/index.html
@@ -6267,6 +6267,9 @@ function recaptchaOnload() {
 						<a href="https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ" target="_blank">
 							<img src="./index_files/C67CC597BE29EDA1.png" alt="">
 						</a>
+						<a href="https://www.youtube.com/@prashantgoswami9030" target="_blank">
+							<img src="./index_files/Youtube_icon.png" alt="">
+						</a>
 				</div>
 			</div><div id="el-864220" class="element text-element  "> 
 		<div class="text-content"><h3 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 14px;">Google scholar</span></font></span></a></h3></div> 
