--- a/index.html
+++ b/index.html
@@ -6267,6 +6267,7 @@ function recaptchaOnload() {
 						<a href="https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ" target="_blank">
 							<img src="./index_files/C67CC597BE29EDA1.png" alt="">
 						</a>
+						&nbsp;&nbsp;&nbsp;&nbsp;
 						<a href="https://www.youtube.com/@prashantgoswami9030" target="_blank">
 							<img src="./index_files/Youtube_icon.png" alt="">
 						</a>
