--- a/index.html
+++ b/index.html
@@ -4593,7 +4593,7 @@ body.mobile-mode .ug-textpanel-title {
 #el-864218 img{width: 37px;height: 35px;left: 0px;top: 0px;}
 #el-864218 {
 			left:40px;top:629px;z-index:1020;width:36px;height:35px; 
-				border: 8px solid rgb(207, 207, 207);
+				border: 4px solid rgb(207, 207, 207);
 			
 			border-radius: 250px 250px 250px 250px;
 		
@@ -4622,7 +4622,7 @@ body.mobile-mode .ug-textpanel-title {
 #el-864219 img{width: 37px;height: 37px;left: 0px;top: 0px;}
 #el-864219 {
 			left:240px;top:629px;z-index:1020;width:36px;height:35px; 
-				border: 8px solid rgb(207, 207, 207);
+				border: 4px solid rgb(207, 207, 207);
 			
 			border-radius: 250px 250px 250px 250px;
 		
@@ -6310,12 +6310,13 @@ function recaptchaOnload() {
 						</a>
 				</div>
 			</div>
-			<div id="el-864220" class="element text-element  "> 
-<!--		<div class="text-content"><h3 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 14px;">Google scholar</span></font></span></a></h3></div> 
+<!--			<div id="el-864220" class="element text-element  "> 
+		<div class="text-content"><h3 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 14px;">Google scholar</span></font></span></a></h3></div> 
 			<div id="el-864221" class="element text-element  "> 
 		<div class="text-content"><h3 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://www.youtube.com/@prashantgoswami9030,&quot;inNewWin&quot;:true}" href="https://www.youtube.com/@prashantgoswami9030" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 14px;">YouTube Channel</span></font></span></a></h3></div> -->
 <!--		<div class="text-content"><h4 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://prashantgos.github.io/SubmissionVenues.html&quot;,&quot;inNewWin&quot;:true}" href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 10px;">Submission Venues</span></font></span></a></h4></div>-->
-		</div><div id="el-124102" class="element text-element  "> 
+<!--		</div>   --!>
+		<div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Jun 2024: Our paper "<strong>Parallel spatiotemporally adaptive DEM-based snow simulation</strong>" is accepted at High Performance Graphics 2024</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Mar 2024: Our paper "<strong>Exploring the Effects of Foveated Rendering on Virtual Reality Game Graphics</strong>" is accepted at IEEE GEM 2024</span></li>
