--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6232,9 +6232,10 @@ function recaptchaOnload() {
 
 <p>&nbsp;</p>
 
-<p>I have reviewed book for the following publishers:</p>
+<p>Recruitment process:</p>
 <ul>
-	<li>Bentham Manuscript</li>
+<li>Selection Committee, Senior Lecturer in Computer Graphics, Universitat Pompeu Fabra (UPF Barcelona) (2024)  </li>
+<li>External Reviewer, Ass. Senior Lecturer Position, Malmö University (2022)</li>
 </ul>
 
 <p>&nbsp;</p>
@@ -6270,6 +6271,13 @@ function recaptchaOnload() {
 	<li> Cogent Education Journal</li>
 	<li>Engineering Applications of Artificial Intelligence</li>
 	<li>Journal of Zhejiang University Science C Journal (Computers &amp; Electronics)</li>
+</ul>
+
+<p>&nbsp;</p>
+
+<p>I have reviewed book for the following publishers:</p>
+<ul>
+	<li>Bentham Manuscript</li>
 </ul>
 
 
