--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6232,11 +6232,7 @@ function recaptchaOnload() {
 
 <p>&nbsp;</p>
 
-<p>Recruitment process:</p>
-<ul>
-<li>Selection Committee, Senior Lecturer in Computer Graphics, Universitat Pompeu Fabra (UPF Barcelona) (2024)  </li>
-<li>External Reviewer, Ass. Senior Lecturer Position, Malmö University (2022)</li>
-</ul>
+
 
 <p>&nbsp;</p>
 
@@ -6289,6 +6285,16 @@ function recaptchaOnload() {
 	<li>Member of Grading Committee (2023), <a href="https://www.his.se/en/about-us/events/calendar/2023/disseration-bringing-game-analytics-to-indie-game-publishing--method-and-tool-support-for-indie-mobile-game-publishing/" target="_blank"><u>Yanhui Su</u></a> </li>
 	<li>Substitute Member of Grading Committee (2022), <a href="https://www.bth.se/nyheter/timn-nyheter/disputation-vinicius-ludwig-barbosa/" target="_blank"><u>Vinicius Ludwig Barbosa</u></a> </li>
 </ul>
+
+<br><br>
+<h4><strong>Recruitment process</strong></h4>
+
+<ul>
+	<li>Selection Committee, Senior Lecturer in Computer Graphics, Universitat Pompeu Fabra (UPF Barcelona) (2024)</li>
+	<li>External Reviewer, Associate Senior Lecturer Position in Games, Malmö University (2022)</li>
+</ul>
+
+
 
 </div>
 		</div> 
