--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6286,9 +6286,10 @@ function recaptchaOnload() {
 <h4><strong>Recruitment process</strong></h4>
 
 <ul>
-	<li>Selection Committee, Senior Lecturer in Computer Graphics, Universitat Pompeu Fabra (UPF Barcelona) (2024)</li>
+	<li>Selection Committee, Senior Lecturer in Computer Graphics, <a href="https://www.upf.edu/documents/213063326/289367890/2024-22_comissio_seleccio.pdf/be23150a-f28a-c9ea-1511-93dc7bd3ed94?t=1721139146412" target="_blank"><u>Universitat Pompeu Fabra (UPF Barcelona)</u></a>(2024)</li>
 	<li>External Reviewer, Associate Senior Lecturer Position in Games, Malmö University (2022)</li>
 </ul>
+
 
 
 
