--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6256,6 +6256,7 @@ function recaptchaOnload() {
 	<li>Symmetry Journal</li>
 	<li>Transactions on Haptics</li>
 	<li>WorldHaptics</li>
+	<li>PeerJ Journals</li>
 	<li>ACM SIGSPATIAL International Conference</li>
 	<li>Eurographics Parallel Graphics and Visualization</li>
 	<li>ACM SIGGRAPH High-Performance Graphics</li>
