--- a/Teaching.html
+++ b/Teaching.html
@@ -6149,7 +6149,7 @@ function recaptchaOnload() {
 							</ul>
 						</li>
 						
-						<li class=" selected current ">
+						<li class="">
 							
 							<a href="PeerReviewing.html" class="">Peer Reviewing</a>
 							<ul>
