--- a/index.html
+++ b/index.html
@@ -6424,7 +6424,7 @@ function recaptchaOnload() {
 		</div><div id="el-64209" class="element text-element  "> 
 		<div class="text-content hasFontScale" data-fontscale="0.9"><p><span class="fontSize" style="font-size: 20px; line-height: 1;"><strong>Associate Professor </strong></span><span class="fontSize" style="font-size: 14px; line-height: 85%;">(Universitetslektor/Docent)</span></p>
 
-<p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Department of Computer Science (DIDA)</strong></span></p>
+<p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; "><strong>Department of Computer Science (DIDA)</strong></span></p>
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Blekinge Institute of Technology (BTH) </strong></span></p>
 
 <p>&nbsp;</p>
