--- a/index.html
+++ b/index.html
@@ -6431,11 +6431,11 @@ function recaptchaOnload() {
 
 <p>&nbsp;</p>
 
-<p><span class="fgColor fg-C3"><em><strong>Email:</strong></em></span> prashant.goswami@bth.se</p>
+<p style="margin-bottom:0;"><span class="fgColor fg-C3"><em><strong>Email:</strong></em></span> prashant.goswami@bth.se</p>
 
-<p><span class="fgColor fg-C3"><em><strong>Phone:</strong></em></span> +0 (46)&nbsp;455-385826</p>
+<p style="margin-bottom:0;"><span class="fgColor fg-C3"><em><strong>Phone:</strong></em></span> +0 (46)&nbsp;455-385826</p>
 
-<p><span class="fgColor fg-C3"><em><strong>Address:</strong></em></span> Room J3624, BTH Karlskrona 371 41</p>
+<p style="margin-bottom:0;"><span class="fgColor fg-C3"><em><strong>Address:</strong></em></span> Room J3624, BTH Karlskrona 371 41</p>
 </div>
 		</div><div id="el-124097" class="element text-element  "> 
 		
