--- a/index.html
+++ b/index.html
@@ -6427,6 +6427,8 @@ function recaptchaOnload() {
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;">Department of Computer Science (DIDA)</span></p>
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Blekinge Institute of Technology (BTH) </strong></span></p>
 
+<p>&nbsp;</p>
+
 <p><span class="fontSize" style="font-size: 14px; line-height: 85%;">Adjunct Faculty, CSE Department, IIIT Delhi (India)</span></p>
 
 <p>&nbsp;</p>
