--- a/index.html
+++ b/index.html
@@ -6429,7 +6429,7 @@ function recaptchaOnload() {
 
 <p>&nbsp;</p>
 
-<p><span class="fontSize" style="font-size: 14px; line-height: 85%;">Adjunct Faculty, CSE Department, IIIT Delhi (India)</span></p>
+<p><span class="fontSize" style="font-size: 14px; line-height: 85%;"><em>Adjunct Faculty, CSE Department, IIIT Delhi (India)</em></span></p>
 
 <p>&nbsp;</p>
 
