--- a/Publications.html
+++ b/Publications.html
@@ -6434,6 +6434,18 @@ function recaptchaOnload() {
 		<div class="text-content"><h3><strong>Publications</strong></h3>  <br>
 		
 		
+<h2 style="padding-left:25px;"><strong>2025</strong></h2> 
+<ul style="list-style: none; line-height: 120%">
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/IVL_25.png"/>
+						<b>Human-Centered Intelligent Realities Laboratory</b>
+						<br/>
+						Veronica Sundstedt, Yan Hu, Patrik Arlos, Shahrooz Abghari, Prashant Goswami, Kurt Tutschku, Majed Elwardy, Chaoming Wang, Bowen Qin
+						<br/><i>3rd Workshop on Immersive Visualization Laboratories – Past, Present and Future (IVL), IEEE VR </i> 2025 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
+						<br/><br/><br/><br/><br/>
+				</li>			
+</ul>				
+		
 <h2 style="padding-left:25px;"><strong>2024</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/HPG24.png"/>
@@ -6922,7 +6934,7 @@ function recaptchaOnload() {
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
