--- a/Supervision.html
+++ b/Supervision.html
@@ -6211,7 +6211,7 @@ function recaptchaOnload() {
 <p>&nbsp;</p> 
 <p><u>Others</u></p> 
 <ul> 
- <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Peng Cong</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor now, 2017-now, Discontinued)</font></font></li> 
+ <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Peng Cong</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor 2022-2024, Co-supervised with Guohua Bai 2018-2022 , Discontinued)</font></font></li> 
 </ul> 
 
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Civilingenjör/Master thesis:</span></h3> 
