--- a/Teaching.html
+++ b/Teaching.html
@@ -6194,13 +6194,14 @@ function recaptchaOnload() {
 		<div class="text-content"><h4><strong>Teaching</strong></h4> 
 
 <p><u>Current :</u></p> 
-<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2024  (Examiner, Course responsible) </p> 
-<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2024  (Examiner, Course responsible)</p> 
-<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2024&nbsp; (Head-Examiner)</p>
+<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2025  (Examiner, Course responsible) </p> 
+<p>DV1583 : Högskola Thesis in Computer Science, IT Security (LP3/LP4) 2025  (Examiner, Course responsible)</p> 
+<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2025&nbsp; (Head-Examiner)</p>
 
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 <p><u>&nbsp;Previous (Examiner, Course responsible and Main instructor):</u></p>
+<p>DV2591 : Game Engine Architecture (LP2) 2024&nbsp; &nbsp; &nbsp; &nbsp;(Shadow course)</p>
 <p>DV1521 : Research Orientation in Game and Software Technology (LP4) 2024&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.2/4.0)</p>
 <p>DV2591 : Game Engine Architecture (LP2) 2023&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.9/4.0)</p>
 <p>DV1521 : Research Orientation in Game and Software Technology (LP4) 2023&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.3/4.0)</p>
@@ -6226,7 +6227,7 @@ function recaptchaOnload() {
 <p>DV2549 : Game Engine Architecture (LP1) 2015 &nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.4/4.0)</p> 
 <p>DV1474 : Visualization (LP3) 2015&nbsp;</p> 
 <p>&nbsp;</p> 
-<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2019-2023&nbsp; (Head-Examiner)</p>
+<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2019-2024&nbsp; (Head-Examiner)</p>
 <p>&nbsp;</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2024  (Examiner, Course responsible) (Course evaluation: 3.4/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2023  (Examiner, Course responsible) (Course evaluation: 3.3/4.0)</p> 
@@ -6237,10 +6238,10 @@ function recaptchaOnload() {
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2018 (Examiner, Course responsible) (Course evaluation: 3.7/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2017 (Examiner, Course responsible) (Course evaluation: 2.6/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2016(Examiner)</p> 
-<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2024  (Examiner, Course responsible) (Course evaluation: -)</p> 
-<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2023  (Examiner, Course responsible) (Course evaluation: -)</p> 
-<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2022  (Examiner, Course responsible) (Course evaluation: -)</p> 
-<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2021  (Examiner, Course responsible) (Course evaluation: -)</p> 
+<p>DV1583 : Högskola Thesis in Computer Science, IT Security (LP3/LP4) 2024  (Examiner, Course responsible) (Course evaluation: -)</p> 
+<p>DV1583 : Högskola Thesis in Computer Science, IT Security (LP3/LP4) 2023  (Examiner, Course responsible) (Course evaluation: -)</p> 
+<p>DV1583 : Högskola Thesis in Computer Science, IT Security (LP3/LP4) 2022  (Examiner, Course responsible) (Course evaluation: -)</p> 
+<p>DV1583 : Högskola Thesis in Computer Science, IT Security (LP3/LP4) 2021  (Examiner, Course responsible) (Course evaluation: -)</p> 
 <p>&nbsp;</p> 
 <p>My previous teaching page at INRIA, UJF is&nbsp;<span class="fgColor" style="color:#0054f7;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;http://maverick.inria.fr/~Prashant.Goswami/index.html&quot;,&quot;inNewWin&quot;:false}" href="http://maverick.inria.fr/~Prashant.Goswami/index.html">here</a></span>. I taught a Master level course on "Reconstruction and Geometric Algorithm" at University of Joseph Fourier, Grenoble.</p></div>
 		</div> 
