--- a/index.html
+++ b/index.html
@@ -6394,7 +6394,7 @@ function recaptchaOnload() {
 <!--		</div>   --!>
 		<div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
-	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I am now a member of the IEEE IEEE Consumer Technology Society (CTSoc) Entertainment and Gaming Technical Committee (ENT TC)</span></li>
+	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I am now a member of the IEEE Consumer Technology Society (CTSoc) Entertainment and Gaming Technical Committee (ENT TC)</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Jun 2024: Our paper "<strong>Parallel spatiotemporally adaptive DEM-based snow simulation</strong>" is accepted at High Performance Graphics 2024</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Mar 2024: Our paper "<strong>Exploring the Effects of Foveated Rendering on Virtual Reality Game Graphics</strong>" is accepted at IEEE GEM 2024</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2024: Our State-of-the-Art Report (STAR) on "<strong>Snow and Ice Animation Methods in Computer Graphics</strong>" and an Education paper is accepted at Eurographics 2024!</span></li>
@@ -6413,16 +6413,16 @@ function recaptchaOnload() {
 		</div><div id="el-124103" class="element text-element  "> 
 		<div class="text-content"></div>
 		</div><div id="el-64218" class="element text-element  "> 
-		<div class="text-content paragraph2 "><p class="paragraph2" data-angle="0" data-canvas-width="574.7424" data-font-name="g_font_2" style="text-align: justify;">Dr. Prashant Goswami is an Associate Professor (Universitetslektor/Docent) in 
-		the&nbsp;<a href="https://www.bth.se/om-bth/organisation/fakulteten-for-datavetenskaper/dida/" target="_blank"><u>Department of Computer Science (DIDA)</u></a>, falling under 
+		<div class="text-content paragraph2 "><p class="paragraph2" data-angle="0" data-canvas-width="574.7424" data-font-name="g_font_2" style="text-align: justify;">Dr. Prashant Goswami is an Associate Professor (Biträdande Professor)
+		 in the&nbsp;<a href="https://www.bth.se/om-bth/organisation/fakulteten-for-datavetenskaper/dida/" target="_blank"><u>Department of Computer Science (DIDA)</u></a>, falling under 
 		the&nbsp;<a href="https://www.bth.se/eng/about-bth/organisation/faculty-of-computing/" target="_blank"><u>Faculty of Computing</u></a>&nbsp; at&nbsp;<a href="https://www.bth.se/" target="_blank"><u>BTH (Blekinge Institute of Technology)</u></a>. 
-		He started here as an Assistant Professor (Universitetslektor) in November 2014. He obtained his B. Tech and M. Tech (dual degree) in&nbsp;<a href="http://www.cse.iitd.ernet.in/" target="_blank"><u>Computer Science and Engineering</u></a>&nbsp;from the Indian Institute of Technology (IIT), New Delhi in (2000-)2005. 
+		He started here as an Assistant Professor (Universitetslektor) in November 2014 and became Associate Professor after obtaining the Docent title in 2021. He obtained his B. Tech and M. Tech (dual degree) in&nbsp;<a href="http://www.cse.iitd.ernet.in/" target="_blank"><u>Computer Science and Engineering</u></a>&nbsp;from the Indian Institute of Technology (IIT), New Delhi in (2000-)2005. 
 		After spending two years in the industry, he started his PhD at University of Zurich in July 2007. He successfully defended his dissertation titled "Level-of-detail and Parallel Solutions in Computer Graphics" in December 2011. 
 		He spent little more than a year as a Research Fellow at the&nbsp;<a href="http://www3.gamelab.ntu.edu.sg/" target="_blank"><u>gameLab</u></a>&nbsp;at &nbsp;<a href="https://www.ntu.edu.sg/Pages/home.aspx" target="_blank"> <u> Nanyang Technological University</u></a>, (NTU) Singapore (March 2012 - April 2013) where he worked in the field of geometric modeling. 
 		He was a postdoc at the&nbsp;<a href="http://maverick.inria.fr/" target="_blank"><u>MAVERICK</u></a>&nbsp;group at INRIA, Grenoble (August 2013 - November 2014) where he focused on real-time landscape-size convective cloud simulation before moving to BTH.</p>
 </div>
 		</div><div id="el-64209" class="element text-element  "> 
-		<div class="text-content hasFontScale" data-fontscale="0.9"><p style="margin-bottom:0;"><span class="fontSize" style="font-size: 20px; line-height: 1;"><strong>Associate Professor </strong></span><span class="fontSize" style="font-size: 14px; line-height: 85%;">(Universitetslektor/Docent)</span></p>
+		<div class="text-content hasFontScale" data-fontscale="0.9"><p style="margin-bottom:0;"><span class="fontSize" style="font-size: 18px; line-height: 1;"><strong>Associate Professor </strong></span><span class="fontSize" style="font-size: 14px; line-height: 85%;">(Biträdande Professor, Ph.D., Docent)</span></p>
 
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;">Department of Computer Science (DIDA)</span></p>
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Blekinge Institute of Technology (BTH) </strong></span></p>
