--- a/index.html
+++ b/index.html
@@ -6394,7 +6394,7 @@ function recaptchaOnload() {
 <!--		</div>   --!>
 		<div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
-	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I am promoted to the Biträdande Professor position!</span></li>
+	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I have been promoted to the Biträdande Professor position!</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I am now a member of the IEEE Consumer Technology Society (CTSoc) Entertainment and Gaming Technical Committee (ENT TC)</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Jun 2024: Our paper "<strong>Parallel spatiotemporally adaptive DEM-based snow simulation</strong>" is accepted at High Performance Graphics 2024</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Mar 2024: Our paper "<strong>Exploring the Effects of Foveated Rendering on Virtual Reality Game Graphics</strong>" is accepted at IEEE GEM 2024</span></li>
@@ -6423,7 +6423,7 @@ function recaptchaOnload() {
 		He was a postdoc at the&nbsp;<a href="http://maverick.inria.fr/" target="_blank"><u>MAVERICK</u></a>&nbsp;group at INRIA, Grenoble (August 2013 - November 2014) where he focused on real-time landscape-size convective cloud simulation before moving to BTH.</p>
 </div>
 		</div><div id="el-64209" class="element text-element  "> 
-		<div class="text-content hasFontScale" data-fontscale="0.9"><p style="margin-bottom:0;"><span class="fontSize" style="font-size: 18px; line-height: 1;"><strong>Associate Professor </strong></span><span class="fontSize" style="font-size: 14px; line-height: 85%;">(Biträdande Professor, Ph.D., Docent)</span></p>
+		<div class="text-content hasFontScale" data-fontscale="0.9"><p style="margin-bottom:0;"><span class="fontSize" style="font-size: 18px; line-height: 1;"><strong>Associate Professor </strong></span><span class="fontSize" color="#9900FF" style="font-size: 14px; line-height: 85%;">(Biträdande Professor, Ph.D., Docent)</span></p>
 
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;">Department of Computer Science (DIDA)</span></p>
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Blekinge Institute of Technology (BTH) </strong></span></p>
