--- a/index.html
+++ b/index.html
@@ -6428,7 +6428,7 @@ function recaptchaOnload() {
 		</div><div id="el-64209" class="element text-element  "> 
 <!--<div class="text-content hasFontScale" data-fontscale="0.9"><p style="margin-bottom:0;"><span class="fontSize" style="font-size: 18px; line-height: 1;"><strong>Associate Professor </strong></span><span class="fontSize" style="color:#9900FF" style="font-size: 14px; line-height: 85%;">(Biträdande Professor, Ph.D., Docent)</span></p>-->
 <div class="text-content hasFontScale" data-fontscale="0.9"><p style="margin-bottom:0;"><span class="fontSize" style="font-size: 16px; line-height: 1;"><strong>Associate Professor, Ph.D. </strong></p>
-<p style="margin-bottom:0;"><span class="fontSize" style="color:#ff5733" style="font-size: 14px; line-height: 85%;">(Biträdande Professor, Docent)</span></p>
+<p style="margin-bottom:0;"><span class="fontSize" style="color:#3352ff" style="font-size: 14px; line-height: 85%;">(Biträdande Professor, Docent)</span></p>
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;">Department of Computer Science (DIDA)</span></p>
 <p style="margin-bottom:0;"><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Blekinge Institute of Technology (BTH) </strong></span></p>
 
