--- a/Publications.html
+++ b/Publications.html
@@ -6436,6 +6436,15 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2025</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/CVM_2025.png"/>
+						<b>Immersive Analytics Meets Artificial Intelligence: A Systematic Review</b>
+						<br/>
+						Chaoming Wang, Valeria Garro, Veronica Sundstedt, Prashant Goswami
+						<br/><i>Computational Visual Media (Accepted) </i> 2025 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
+						<br/><br/><br/><br/><br/>
+				</li>	
+				
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/IVL_25.png"/>
 						<b>Human-Centered Intelligent Realities Laboratory</b>
 						<br/>
