--- a/index.html
+++ b/index.html
@@ -6472,20 +6472,23 @@ function recaptchaOnload() {
 		
 	</footer>
 
-<!-- Default Statcounter code for Homepage https://prashantgos.github.io/ -->
+
+<!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
-var sc_project=11916227; 
-var sc_invisible=1; 
-var sc_security="c053b42c"; 
-var sc_https=1; 
+var sc_project=11916227;
+var sc_invisible=1;
+var sc_security="e9ec2a49";
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
 </script>
-<script type="text/javascript"
-src="https://www.statcounter.com/counter/counter.js" async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
+<noscript><div class="statcounter"><a title="web analytics"
 href="http://statcounter.com/" target="_blank"><img class="statcounter"
-src="//c.statcounter.com/11916227/0/c053b42c/1/" alt="Web
-Analytics"></a></div></noscript>
-<!-- End of Statcounter Code -->
+src="//c.statcounter.com/11916227/0/c053b42c/1/" alt="web
+analytics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+
 
 
 <div class="goog-te-spinner-pos"><div class="goog-te-spinner-animation"><svg xmlns="http://www.w3.org/2000/svg" class="goog-te-spinner" width="96px" height="96px" viewBox="0 0 66 66"><circle class="goog-te-spinner-path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle></svg></div></div></body></html>
