--- a/index.html
+++ b/index.html
@@ -6473,21 +6473,20 @@ function recaptchaOnload() {
 	</footer>
 
 
-<!-- Start of StatCounter Code for Default Guide -->
+<!-- Default Statcounter code for Homepage https://prashantgos.github.io/ -->
 <script type="text/javascript">
-var sc_project=11916227;
-var sc_invisible=1;
-var sc_security="c053b42c";
-var scJsHost = (("https:" == document.location.protocol) ?
-"https://secure." : "http://www.");
-document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
-"statcounter.com/counter/counter.js'></"+"script>");
+var sc_project=11916227; 
+var sc_invisible=1; 
+var sc_security="c053b42c"; 
+var sc_https=1; 
 </script>
-<noscript><div class="statcounter"><a title="web analytics"
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
 href="http://statcounter.com/" target="_blank"><img class="statcounter"
-src="//c.statcounter.com/11916227/0/c053b42c/1/" alt="web
-analytics"></a></div></noscript>
-<!-- End of StatCounter Code for Default Guide -->
+src="//c.statcounter.com/11916227/0/c053b42c/1/" alt="Web
+Analytics"></a></div></noscript>
+<!-- End of Statcounter Code -->
 
 
 
