--- a/index.html
+++ b/index.html
@@ -6487,7 +6487,7 @@ href="http://statcounter.com/" target="_blank"><img class="statcounter"
 src="//c.statcounter.com/11916227/0/c053b42c/1/" alt="Web
 Analytics"></a></div></noscript>
 
-<div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'https://prashantgos.github.io/', 'user' : 11916227, 'server' : '2', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2025-02-28', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www2.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www2.clustrmaps.com/user/11916227"><img src="http://www2.clustrmaps.com/stats/maps-no_clusters/prashantgos.github.io/.html-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
+<div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'https://prashantgos.github.io/', 'user' : 11916227, 'server' : '2', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2025-02-28', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www2.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www2.clustrmaps.com/user/11916227"><img src="http://www2.clustrmaps.com/stats/maps-no_clusters/prashantgos.github.io/index.html-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
 
 <!-- End of Statcounter Code -->
 
