--- a/Supervision.html
+++ b/Supervision.html
@@ -6273,7 +6273,10 @@ function recaptchaOnload() {
 <p><u>Current (2024):</u></p> 
 <ul> 
 
-
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Raghu Vamsi Vajjhula &amp; Satish kumar Buravelli (co-supervised with Sadi Alawadi)</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Surya Pothuri &amp; Lakhan Kumar Sundur Purushotham (co-supervised with Santosh Jagtap @ IIT Guwahati &amp; Jayant Karve @ RCupe Pvt. Ltd., Bangalore) </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Abhilash Chinnamsetti &amp; Rakesh Reddy Karri (co-supervised with Amir Yavariabdi)</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Rochana Priya Parupalli &amp; Devi SriRam Petta (co-supervised with Amir Yavariabdi) </font></font></li>
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Naga Sai Abhiram Gopal Vemana</font></font></li>
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Viktor Norlund</font></font></li>
 
