--- a/Publications.html
+++ b/Publications.html
@@ -6440,7 +6440,7 @@ function recaptchaOnload() {
 						<b>Personalized Smart Immersive XR Environments: A Systematic Literature Review</b>
 						<br/>
 						Nan Huang, Prashant Goswami, Veronica Sundstedt, Yan Hu, Abbas Cheddad
-						<br/><i>The Visual Computer (Accepted) </i> 2025 <br/>
+						<br/><i>The Visual Computer <p style="color:red;">Journal</p> (Accepted) </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6952,7 +6952,7 @@ function recaptchaOnload() {
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
