--- a/Publications.html
+++ b/Publications.html
@@ -6440,7 +6440,7 @@ function recaptchaOnload() {
 						<b>Personalized Smart Immersive XR Environments: A Systematic Literature Review</b>
 						<br/>
 						Nan Huang, Prashant Goswami, Veronica Sundstedt, Yan Hu, Abbas Cheddad
-						<br/><i>The Visual Computer <font color="IndianRed">Journal</font>  (Accepted) </i> 2025 <br/>
+						<br/><i>The Visual Computer <font color="IndianRed"><strong>Journal</strong></font>  (Accepted) </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
