--- a/Publications.html
+++ b/Publications.html
@@ -6449,7 +6449,7 @@ function recaptchaOnload() {
 						<b>Immersive Analytics Meets Artificial Intelligence: A Systematic Review</b>
 						<br/>
 						Chaoming Wang, Valeria Garro, Veronica Sundstedt, Prashant Goswami
-						<br/><i>Computational Visual Media (Accepted) </i> 2025 <br/>
+						<br/><i>Computational Visual Media <font color="IndianRed"><strong>Journal</strong></font> (Accepted) </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6470,7 +6470,7 @@ function recaptchaOnload() {
 						<b>Parallel spatiotemporally adaptive DEM-based snow simulation</b>
 						<br/>
 						Simon Andreasson*, Linus Östergaard*, Prashant Goswami (* equal contribution)
-						<br/><i>Proceedings of the ACM on Computer Graphics and Interactive Techniques Journal (High Performance Graphics), Vol. 7, Num. 3, </i> 2024 <br/>
+						<br/><i>Proceedings of the ACM on Computer Graphics and Interactive Techniques <font color="IndianRed"><strong>Journal</strong></font> (High Performance Graphics), Vol. 7, Num. 3, </i> 2024 <br/>
 						<a href="https://dl.acm.org/doi/pdf/10.1145/3675374" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=rlBrUPU2CPc" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<a href="https://www.youtube.com/watch?v=L8O_ruVe4Uo" target="_blank">[<font color="#0547f6">Presentation</font>]</a>						
@@ -6480,7 +6480,7 @@ function recaptchaOnload() {
 						<b>Snow and Ice Animation Methods in Computer Graphics</b>
 						<br/>
 						Prashant Goswami
-						<br/><i>State-of-the-art Report, Eurographics, Computer Graphics Forum, Vol. 43, Num. 2, </i>, 2024 <br/>
+						<br/><i>State-of-the-art Report, Eurographics, Computer Graphics Forum <font color="IndianRed"><strong>Journal</strong></font>, Vol. 43, Num. 2, </i>, 2024 <br/>
 						<a href="https://www.diva-portal.org/smash/get/diva2:1853187/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6504,7 +6504,7 @@ function recaptchaOnload() {
 						<b>Towards an Ethical and Data Privacy Metrology for AI-Enriched Human-Centered XR Systems</b>
 						<br/>
 						Yan Hu, Kurt Tutschku, Veselka Boeva, Prashant Goswami, Shahrooz Abghari, Veronica Sundstedt
-						<br/><i>To Appear, IEEE International Conference on Metrology for eXtended Reality, Artificial Intelligence and Neural Engineering</i>, 2024 <br/>
+						<br/><i>IEEE International Conference on Metrology for eXtended Reality, Artificial Intelligence and Neural Engineering</i>, 2024 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>					
@@ -6533,7 +6533,7 @@ function recaptchaOnload() {
 						<b>Interactive landscape–scale cloud animation using DCGAN</b>
 						<br/>
 						Prashant Goswami*, Abbas Cheddad*, Fredrik Junede, Samuel Asp (* equal contribution)
-						<br/><i>Frontiers in Computer Science (Computer Graphics and Visualization), Vol. 5</i>, 2023 <br/>
+						<br/><i>Frontiers in Computer Science <font color="IndianRed"><strong>Journal</strong></font> (Computer Graphics and Visualization), Vol. 5</i>, 2023 <br/>
 						<a href="http://bth.diva-portal.org/smash/get/diva2:1741993/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://ardisdataset.github.io/Cloud/" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6542,7 +6542,7 @@ function recaptchaOnload() {
 						<b>Design of Artificial Intelligence-based products: Barriers and Enablers</b>
 						<br/>
 						 Santosh Jagtap, Prashant Goswami 
-						<br/><i>Book Chapter, Springer, Design in the Era of Industry 4.0, Vol. 3, Proceedings of the 9th International Conference on Research Into Design (iCord'23), pp.647-658,</i> 2023 <br/>
+						<br/><i>Book Chapter, Springer, Design in the Era of Industry 4.0, Vol. 3, <font color="IndianRed"><strong>Book chapter</strong></font>, Proceedings of the 9th International Conference on Research Into Design (iCord'23), pp.647-658,</i> 2023 <br/>
 						<a href="https://www.researchgate.net/profile/Santosh-Jagtap-3/publication/372610533_Design_of_Artificial_Intelligence-Based_Products_Barriers_and_Enablers/links/64cb18a140a524707b8e3334/Design-of-Artificial-Intelligence-Based-Products-Barriers-and-Enablers.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
@@ -6589,7 +6589,7 @@ function recaptchaOnload() {
 						<b>A Polarizing Filter Function for Real-Time Rendering</b>
 						<br/>
 						Viktor Enfeldt, Prashant Goswami
-						<br/><i>Journal of Computer Graphics Techniques (JCGT), pp. 59-82, Vol. 10, Num. 2</i>, 2021 <br/>
+						<br/><i><font color="IndianRed"><strong>Journal</strong></font> of Computer Graphics Techniques (JCGT), pp. 59-82, Vol. 10, Num. 2</i>, 2021 <br/>
 						<a href="http://jcgt.org/published/0010/02/03/paper.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=3nMkQh3mKsI" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<a href="http://jcgt.org/published/0010/02/03/" target="_blank">[<font color="#0547f6">JCGT Page</font>]</a>
@@ -6599,7 +6599,7 @@ function recaptchaOnload() {
 						<b>A Survey of Modeling, Rendering and Animation of Clouds in Computer Graphics</b>
 						<br/>
 						 Prashant Goswami
-						<br/><i> The Visual Computer, pp. 1931-1948, Vol. 37, Num. 7</i>, 2021 <br/>
+						<br/><i> The Visual Computer <font color="IndianRed"><strong>Journal</strong></font>, pp. 1931-1948, Vol. 37, Num. 7</i>, 2021 <br/>
 						<a href="https://bth.diva-portal.org/smash/get/diva2:1458441/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
@@ -6622,7 +6622,7 @@ function recaptchaOnload() {
 						<b>A literature review of current technologies on health data integration for patient-centered health management</b>
 						<br/>
 						Peng Cong, Prashant Goswami, Guohua Bai
-						<br/><i>Health Informatics Journal, pp.1926-1951, Vol. 26, Num. 3</i>, 2020 <br/>
+						<br/><i>Health Informatics <font color="IndianRed"><strong>Journal</strong></font>, pp.1926-1951, Vol. 26, Num. 3</i>, 2020 <br/>
 						<a href="https://journals.sagepub.com/doi/10.1177/1460458219892387" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 </li>
@@ -6655,7 +6655,7 @@ function recaptchaOnload() {
 						<b>Meaningful Integration of Data from Heterogeneous Health Services and Home Environment Based on Ontology</b>
 						<br/>
 						Peng Cong, Prashant Goswami
-						<br/><i>Sensors 2019, Art. 1747, Vol. 19, Num. 8</i>, 2019 <br/>
+						<br/><i>Sensors <font color="IndianRed"><strong>Journal</strong></font>, Art. 1747, Vol. 19, Num. 8</i>, 2019 <br/>
 						<a href="https://www.mdpi.com/1424-8220/19/8/1747/htm" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6676,7 +6676,7 @@ function recaptchaOnload() {
 						<b>Linking Health Web Services as Resource Graph by Semantic REST Resource Tagging</b>
 						<br/>
 						Peng Cong, Prashant Goswami, Guohua Bai
-						<br/><i> International Conference on Current and Future trends of Info. and Comm. Tech. in Healthcare (Procedia Computer Science), pp. 319-326</i>, 2018 <br/>
+						<br/><i> International Conference on Current and Future trends of Info. and Comm. Tech. in Healthcare (Procedia <font color="IndianRed"><strong>Journal</strong></font>, Computer Science), pp. 319-326</i>, 2018 <br/>
 						<a href="https://reader.elsevier.com/reader/sd/pii/S1877050918318441?token=7194D285293716810A831FFA1CDE0A96A16F4CD180B3A65A5AA47E41C9075559DE126065355A29D47D564EDD55E59A0D" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6684,7 +6684,7 @@ function recaptchaOnload() {
 						<b>Fuzzy Matching of OpenAPI Described REST Services</b>
 						<br/>
 						Peng Cong, Prashant Goswami, Guohua Bai 
-						<br/><i> International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, (Procedia Computer Science), pp. 1333-1322</i>, 2018 <br/>
+						<br/><i> International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, (Procedia <font color="IndianRed"><strong>Journal</strong></font>, Computer Science), pp. 1333-1322</i>, 2018 <br/>
 						<a href="https://reader.elsevier.com/reader/sd/pii/S1877050918313590?token=611B6CF754FD8CE405F2D00DDCE1CAF8C7F31DF426763E45DA1AD572C9278A86F71B2654B849876F16579E1BAA658052" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>				
@@ -6700,7 +6700,7 @@ function recaptchaOnload() {
 						<b>Short-term traffic forecasting using self-adjusting k-nearest neighbours</b>
 						<br/>
 						 Bin Sun, Wei Cheng, Prashant Goswami, Guohua Bai 
-						<br/><i>IET Intelligent Transport Systems,  pp. 412-418,  Vol. 12, Num. 1</i>, 2018 <br/>
+						<br/><i>IET Intelligent Transport Systems <font color="IndianRed"><strong>Journal</strong></font>,  pp. 412-418,  Vol. 12, Num. 1</i>, 2018 <br/>
 						<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8267184&tag=1" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6745,7 +6745,7 @@ function recaptchaOnload() {
 						<b>Correcting and complementing freeway traffic accident data using Mahalanobis distance based outlier detection</b>
 						<br/>
 						Bin Sun, Wei Cheng, Guohua Bai, Prashant Goswami
-						<br/><i>Technical Gazette,  pp. 1597-1607, Vol. 24, no 5,</i> 2017 <br/>
+						<br/><i>Technical Gazette <font color="IndianRed"><strong>Journal</strong></font>,  pp. 1597-1607, Vol. 24, no 5,</i> 2017 <br/>
 						<a href="https://www.researchgate.net/publication/315677027_Correcting_and_Complementing_Freeway_Traffic_Accident_Data_Using_Mahalanobis_Distance_Based_Outlier_Detection target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>			
@@ -6809,7 +6809,7 @@ function recaptchaOnload() {
 						<b>A novel simulation framework based on information asymmetry to evaluate evacuation plan</b>
 						<br/>
 						 Xiaodong Che, Yu Niu, Bin Shui, Jianbo Fu, Guangzheng Fei, Prashant Goswami, Yanci Zhang
-						<br/><i>Proceedings of Computer Graphics International, The Visual Computer, pp.853-861, Vol. 31, Num. 6</i>, 2015 <br/>
+						<br/><i>Proceedings of Computer Graphics International, The Visual Computer <font color="IndianRed"><strong>Journal</strong></font>, pp.853-861, Vol. 31, Num. 6</i>, 2015 <br/>
 						<a href="https://link.springer.com/article/10.1007/s00371-015-1119-6" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6839,7 +6839,7 @@ function recaptchaOnload() {
 						<b>An Interactive Computational Design Tool for Large Reciprocal Frame Structures</b>
 						<br/>
 						Peng Song, Chi-Wing Fu, Prashant Goswami, Jianmin Zheng, Niloy J. Mitra, Daniel Cohen-Or
-						<br/><i>Nexus Network Journal, pp. 109-118, Vol. 16, Num. 1</i>, 2014 <br/>
+						<br/><i>Nexus Network <font color="IndianRed"><strong>Journal</strong></font>, pp. 109-118, Vol. 16, Num. 1</i>, 2014 <br/>
 						<a href="https://link.springer.com/article/10.1007/s00004-014-0173-0" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 </li>
@@ -6851,7 +6851,7 @@ function recaptchaOnload() {
 						<b>Reciprocal Frame Structures Made Easy</b>
 						<br/>
 						 Peng Song*, Chi-Wing Fu*, Prashant Goswami, Jianmin Zheng, Niloy J. Mitra, Daniel Cohen-Or (*: joint first authors)
-						<br/><i> ACM Transactions on Graphics (TOG) - SIGGRAPH 2013 Conference Proceedings (TOG), Art. 94, Vol. 32, Num. 4</i>, 2013 <br/>
+						<br/><i> ACM Transactions on Graphics (TOG) <font color="IndianRed"><strong>Journal</strong></font> - SIGGRAPH 2013 Conference Proceedings (TOG), Art. 94, Vol. 32, Num. 4</i>, 2013 <br/>
 						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/ReciprocalFrameStructures_2013.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=ZYOAXITezrc" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
@@ -6873,7 +6873,7 @@ function recaptchaOnload() {
 						<b>An efficient multi-resolution framework for high quality interactive rendering of massive point clouds using multi-way kd-trees</b>
 						<br/>
 						 Prashant Goswami, Fatih Erol, Rahul Mukhi, Renato Pajarola, Enrico Gobbetti
-						<br/><i> The Visual Computer, pp. 69-83, Vol. 29, Num. 1</i>, 2013 <br/>
+						<br/><i> The Visual Computer <font color="IndianRed"><strong>Journal</strong></font>, pp. 69-83, Vol. 29, Num. 1</i>, 2013 <br/>
 						<a href="http://www.crs4.it/vic/data/papers/tvc2013-mwkdtrees.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=ZS3ITMYeMmA" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
