--- a/index.html
+++ b/index.html
@@ -6398,7 +6398,7 @@ function recaptchaOnload() {
 		<div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I have been promoted to the Biträdande Professor position!</span></li>
-	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I am now a member of the IEEE Consumer Technology Society (CTSoc) Entertainment and Gaming Technical Committee (ENT TC)</span></li>
+	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I am now a member of the IEEE Consumer Technology Society (CTSoc) <a href="https://ctsoc.ieee.org/technical/technical-committees/ent-tc.html?view=article&id=307:ent-tc-members&catid=21" target="_blank"><u> Entertainment and Gaming Technical Committee (ENT TC) </u></a></span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Jun 2024: Our paper "<strong>Parallel spatiotemporally adaptive DEM-based snow simulation</strong>" is accepted at High Performance Graphics 2024</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Mar 2024: Our paper "<strong>Exploring the Effects of Foveated Rendering on Virtual Reality Game Graphics</strong>" is accepted at IEEE GEM 2024</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2024: Our State-of-the-Art Report (STAR) on "<strong>Snow and Ice Animation Methods in Computer Graphics</strong>" and an Education paper is accepted at Eurographics 2024!</span></li>
