--- a/Publications.html
+++ b/Publications.html
@@ -6449,7 +6449,7 @@ function recaptchaOnload() {
 						<br/>
 						Nan Huang, Prashant Goswami, Veronica Sundstedt, Yan Hu, Abbas Cheddad
 						<br/><i>The Visual Computer <font color="IndianRed"><strong>Journal</strong></font>  (Accepted) </i> 2025 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
+						<a href="https://link.springer.com/article/10.1007/s00371-025-03887-9" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
 
