--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6205,6 +6205,7 @@ function recaptchaOnload() {
 <p>I am serving/have served&nbsp;in&nbsp;the international Technical Program Committee for the following conferences:</p>
 
 <ul>
+	<li>International Conference on 3D Web Technology (Web3D): 2025 (Siena, Italy) </li> 
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2025 (Kaohsiung, Taiwan)</li>
 	<li>Computer Graphics Theory and Applications (GRAPP) 2025 (Porto, Portugal)</li>
 	<li>International Conference on Fog and Mobile Edge Computing (FMEC): 2025 (Tampa, USA)</li>
