--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6238,7 +6238,7 @@ function recaptchaOnload() {
 
 <p>Other conference responsibilities:</p>
 <ul>
-<li>Serving as one of the Workshop Chairs for International Conference on Fog and Mobile Edge Computing (FMEC 2024)</li>
+<li>Served as one of the Workshop Chairs for International Conference on Fog and Mobile Edge Computing (FMEC 2024)</li>
 </ul>
 
 <p>&nbsp;</p>
